test/registry/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-registry
  labels:
    app.kubernetes.io/name: my-registry
spec:
  selector:
    app.kubernetes.io/name: my-registry
  ports:
    - protocol: TCP
      port: 5000
  type: LoadBalancer
